# Squash-PDF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  DRAG_DROP_GUIDE.md  GHOSTSCRIPT_SETUP.md  user_guide.md
docs/examples/: README.md  preset_email_friendly.json  preset_print_quality.json  preset_web_optimized.json
src/squash/: __init__.py  __main__.py  main.py
src/squash/config/: __init__.py  manager.py
src/squash/core/: __init__.py  batch.py  compression.py  ghostscript.py  presets.py
src/squash/gui/: __init__.py  _icon.py  history_dialog.py  main_window.py  preset_editor.py  results_dialog.py  settings_dialog.py  update_dialog.py
src/squash/gui/components/: __init__.py  charts.py  progress_tracker.py  theme_colors.py
src/squash/utils/: __init__.py  filesystem.py  history.py  logger.py  updater.py
src/tests/: __init__.py  conftest.py
src/tests/unit/: test_compression.py  test_config.py  test_history.py  test_preset_manager_custom.py  test_presets.py
